# hyperleaup

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.sbt  pyproject.toml  requirements.txt  setup.py
demo/: Hyperleaup-Demo.dbc  Hyperleaup-Demo.ipynb  create-hyperapi-init-script.dbc
demo/init-scripts/: install-hyper-api-java.sh
hyperleaup/: __init__.py  creation_mode.py  creator.py  hyper_file.py  hyper_utils.py  publisher.py  spark_fixture.py
src/hyperleaup/: __init__.py  creation_mode.py  creator.py  hyper_config.py  hyper_file.py  spark_fixture.py
src/main/scala/com/databricks/labs/hyperleaup/: Creator.scala  HyperFile.scala  Publisher.scala
src/main/scala/com/databricks/labs/hyperleaup/utils/: SparkSessionWrapper.scala  TableauRestUtils.scala
src/test/resources/: log4j.properties
src/test/scala/com/databricks/labs/hyperleaup/: HyperFileTestSuite.scala  HyperFileUtils.scala  SparkSessionFixture.scala
tests/: test_creator.py  test_hyper_file.py  test_utils.py
