[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperleaup"
version = "0.1.2"
authors = [
    { name="Will Girten", email="will.girten@databricks.com" },
    { name="Dustin Vannoy", email="dustin.vannoy@databricks.com" },
]
description = "Create and publish Tableau Hyper files from Apache Spark DataFrames and Spark SQL."
readme = "README.md"
requires-python = ">=3.6"
keywords = ["Spark", "Tableau", "extract", "hyper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark",
    "tableauhyperapi",
    "requests",
    "tableauserverclient",
    "urllib3",
    "databricks-sdk"
]

[project.urls]
"Homepage" = "https://github.com/goodwillpunning/hyperleaup"
"Bug Tracker" = "https://github.com/goodwillpunning/hyperleaup/issues"
